static/scss/top-app-bar.scss
// sass-lint:disable mixins-before-declarations

.header-holder {
  padding: 20px 0;

  @include media-breakpoint-down(md) {
    max-width: 100%;
  }

  .navbar {
    padding: 0;
  }

  .nowrap {
    flex-wrap: unset;
  }
}

.link-section.nowrap.login {
  ul {
    @include media-breakpoint-down(md) {
      margin: 0;
      text-align: right;

      li {
        padding: 0;

        a {
          padding: 5px 3px;
        }

        .dropdown-toggle {
          padding-right: 0;
        }
      }
    }
  }
}

.navbar-collapse {
  li {
    letter-spacing: normal;
    display: inline-block;
    vertical-align: top;
    font-size: 18px;
    line-height: 25px;
    font-weight: 500;
    padding: 5px 0 0 5px;

    a {
      padding: 5px 10px;
      color: black;
      text-decoration: none;
      display: block;

      &.blog-link {
        margin-right: 10px;
      }

      &:hover {
        color: $primary;
      }

      &.button {
        background: $primary;
        color: white;

        &:hover {
          background: black;
        }
      }
    }
  }
}

.site-logo {
  width: 125px;
  height: 35px;
}

.xpro-link {
  z-index: 2;
  position: relative;
  padding: 10px 0 12px;
}

.navbar-toggler.nav-opener {
  border: 1px solid $primary;
  border-radius: 2px;
  color: $primary;
  margin: 5px 0 0;
  padding: 8px 6px 6px;

  .navbar-toggler-icon {
    width: 18px;
    height: 15px;
    display: inline-block;
    border: 1px solid $primary;
    border-width: 2px 0;
    position: relative;
    margin: -2px 5px 0 0;
    vertical-align: top;

    &::after {
      position: absolute;
      left: 0;
      right: 0;
      content: "";
      top: 50%;
      border-top: 2px solid $primary;
      margin: -1px 0 0;
    }
  }
}

.mobile-drawer {
  position: fixed;
  top: 98px;
  right: -366px;
  width: 366px;
  height: calc(100vh - 98px);
  background-color: white;
  transition: right 0.3s ease;
  z-index: 1050;
  overflow-y: auto;
  padding: 26px 32px;
  box-shadow: -2px 0 10px rgb(0 0 0 / 10%);

  &.open {
    right: 0;
  }
}

.drawer-overlay {
  position: fixed;
  top: 98px;
  left: 0;
  width: 100%;
  height: calc(100% - 98px);
  background-color: rgb(0 0 0 / 50%);
  z-index: 1040;
}

.drawer-header {
  display: flex;
  justify-content: flex-end;
  margin-bottom: 1rem;
}

.close-drawer {
  background: none;
  border: none;
  font-size: 1.75rem;
  line-height: 1;
  padding: 0;
  cursor: pointer;
}

.mobile-auth-buttons {
  padding: 8px 0;
  display: flex;
  gap: 12px;
}

a.mobile-auth-button {
  flex: 1;
  justify-content: center;
  align-items: center;
  text-align: center;
  background: $primary;
  color: white;
  padding: 6px 10px;

  &:hover,
  &:focus {
    background: black;
    color: white;
    text-decoration: none;
  }
}

.mobile-catalog-menu {
  display: flex;
  flex-direction: column;
  gap: 8px;
  padding-left: 12px;
}

.mobile-catalog-item {
  display: block;
  color: #333;
  text-decoration: none;
  text-transform: capitalize;
  font-size: 0.9375rem;
  line-height: 1.4;

  &:hover,
  &:focus {
    color: $primary;
    text-decoration: none;
  }
}

.mobile-drawer-heading {
  padding: 4px 0;
  color: black;
  font-weight: 700;
}

.mobile-drawer-section {
  padding: 8px 0;
  display: flex;
  flex-direction: column;
  gap: 8px;
}

.mobile-user-menu {
  margin-left: 10px;
}

